{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 242,
  "lineage": "bdf7e539-5b5f-920a-ee7b-55d470d78bca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882415107630:internet-gateway/igw-0ffdb0019a7021454",
            "id": "igw-0ffdb0019a7021454",
            "owner_id": "882415107630",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0ec84990f5b14be43"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:882415107630:loadbalancer/app/ecs-elb/e13098febcf3dea4",
            "arn_suffix": "app/ecs-elb/e13098febcf3dea4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-elb-1691210836.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:882415107630:loadbalancer/app/ecs-elb/e13098febcf3dea4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02dc7b170520a3110"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028da4e85b573d0c6"
              },
              {
                "subnet_id": "subnet-039363b0c285f2178"
              },
              {
                "subnet_id": "subnet-0c7739e5a6c580a71"
              }
            ],
            "subnets": [
              "subnet-028da4e85b573d0c6",
              "subnet-039363b0c285f2178",
              "subnet-0c7739e5a6c580a71"
            ],
            "tags": {
              "Name": "ecs-elb"
            },
            "tags_all": {
              "Name": "ecs-elb"
            },
            "vpc_id": "vpc-0ec84990f5b14be43",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.security-group",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:882415107630:listener/app/ecs-elb/e13098febcf3dea4/a6832ca79acfd789",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:882415107630:targetgroup/ecs-target-group/49cbb24e77bfd80f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:882415107630:listener/app/ecs-elb/e13098febcf3dea4/a6832ca79acfd789",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:882415107630:loadbalancer/app/ecs-elb/e13098febcf3dea4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs-elb",
            "aws_lb_target_group.ecs-tg",
            "aws_security_group.security-group",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:882415107630:targetgroup/ecs-target-group/49cbb24e77bfd80f",
            "arn_suffix": "targetgroup/ecs-target-group/49cbb24e77bfd80f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:882415107630:targetgroup/ecs-target-group/49cbb24e77bfd80f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ec84990f5b14be43"
          },
          "dependencies": [
            "aws_lb.ecs-elb",
            "aws_security_group.security-group",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882415107630:route-table/rtb-02bf3147f035fa6cd",
            "id": "rtb-02bf3147f035fa6cd",
            "owner_id": "882415107630",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffdb0019a7021454",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec84990f5b14be43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b06616384a871049",
            "route_table_id": "rtb-02bf3147f035fa6cd",
            "subnet_id": "subnet-028da4e85b573d0c6"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.route-table",
            "aws_subnet.subnet",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd50c4beb1f76057",
            "route_table_id": "rtb-02bf3147f035fa6cd",
            "subnet_id": "subnet-039363b0c285f2178"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.route-table",
            "aws_subnet.subnet2",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet3-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea51dc2bbd02ef6c",
            "route_table_id": "rtb-02bf3147f035fa6cd",
            "subnet_id": "subnet-0c7739e5a6c580a71"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.route-table",
            "aws_subnet.subnet3",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882415107630:security-group/sg-02dc7b170520a3110",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02dc7b170520a3110",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-security-group",
            "name_prefix": "",
            "owner_id": "882415107630",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec84990f5b14be43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882415107630:subnet/subnet-028da4e85b573d0c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028da4e85b573d0c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882415107630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ec84990f5b14be43"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882415107630:subnet/subnet-039363b0c285f2178",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039363b0c285f2178",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882415107630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ec84990f5b14be43"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882415107630:subnet/subnet-0c7739e5a6c580a71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7739e5a6c580a71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882415107630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ec84990f5b14be43"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882415107630:vpc/vpc-0ec84990f5b14be43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0addcbc937d3803ac",
            "default_route_table_id": "rtb-02c28cc435af198e0",
            "default_security_group_id": "sg-04cae34440a337671",
            "dhcp_options_id": "dopt-0235ecc2eef49151f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec84990f5b14be43",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c28cc435af198e0",
            "owner_id": "882415107630",
            "tags": {
              "name": "vpc-main"
            },
            "tags_all": {
              "name": "vpc-main"
            }
          }
        }
      ]
    }
  ]
}